fixed the services routes and handlers to use new stuff
