# api/openapi/swagger.json
@@ -15,7 +15,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/authentication/login": {
+        "/auth/login": {
             "post": {
                 "description": "Login a user",
                 "consumes": [
@@ -35,7 +35,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.AuthenticationLoginRequestData"
+                            "$ref": "#/definitions/dtos.AuthLoginReqData"
                         }
                     }
                 ],
@@ -43,13 +43,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.AuthenticationLoginApiResponse"
+                            "$ref": "#/definitions/dtos.AuthLoginApiRes"
                         }
                     }
                 }
             }
         },
-        "/authentication/register": {
+        "/auth/register": {
             "post": {
                 "description": "Register a new user",
                 "consumes": [
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.AuthenticationRegisterRequestData"
+                            "$ref": "#/definitions/dtos.AuthRegisterReqData"
                         }
                     }
                 ],
@@ -77,7 +77,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.AuthenticationRegisterApiResponse"
+                            "$ref": "#/definitions/dtos.AuthRegisterApiRes"
                         }
                     }
                 }
@@ -85,7 +85,7 @@
         }
     },
     "definitions": {
-        "dtos.AuthenticationLoginApiResponse": {
+        "dtos.AuthLoginApiRes": {
             "type": "object",
             "properties": {
                 "additionalInfo": {
@@ -93,7 +93,7 @@
                     "additionalProperties": true
                 },
                 "data": {
-                    "$ref": "#/definitions/dtos.AuthenticationLoginResponseData"
+                    "$ref": "#/definitions/dtos.AuthResData"
                 },
                 "message": {
                     "type": "string"
@@ -106,32 +106,24 @@
                 }
             }
         },
-        "dtos.AuthenticationLoginRequestData": {
+        "dtos.AuthLoginReqData": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 8
                 }
             }
         },
-        "dtos.AuthenticationLoginResponseData": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.AuthenticationRegisterApiResponse": {
+        "dtos.AuthRegisterApiRes": {
             "type": "object",
             "properties": {
                 "additionalInfo": {
@@ -139,7 +131,7 @@
                     "additionalProperties": true
                 },
                 "data": {
-                    "$ref": "#/definitions/dtos.AuthenticationRegisterResponseData"
+                    "$ref": "#/definitions/dtos.AuthResData"
                 },
                 "message": {
                     "type": "string"
@@ -152,18 +144,24 @@
                 }
             }
         },
-        "dtos.AuthenticationRegisterRequestData": {
+        "dtos.AuthRegisterReqData": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 8
                 }
             }
         },
-        "dtos.AuthenticationRegisterResponseData": {
+        "dtos.AuthResData": {
             "type": "object",
             "properties": {
                 "email": {
